# qubot-bot

./: .gitignore  README.md  pyproject.toml
src/: config.json  main.py  messages.json  utils.py
src/cogs/: announcements.py  elsa.py  general.py  journal_club.py
src/qubot/: __main__.py  elsa.py  journal_club.py  ln_refill.py  logbook.py  monday_meeting.py  qubot.py  serverapi.py  test.py  utils.py
src/qubot/decs_visa_tools/: base_logger.py  command_dictionary.py  decs_visa_settings.py  response_parser.py
src/utils/: constants.py  scheduler.py  utils.py
