[project]
name = "qubot"
version = "0.1.0"
description = "Main bot for the QISMIB Discord server"
authors = [
    {name = "Marco"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
