[tool.poetry]
name = "qubot"
version = "1.0.0"
description = "Main bot for the QISMIB Discord server"
authors = ["Marco Gobbo, Rodolfo Carobene"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
